# BNetzA-oeffentliches-Ladesaeulenregister-NiceGUI

./: .gitignore  .secret.bak  README.md  app.py  pyproject.toml  setup.sh
app/: auth.py  config.py  data.py  index.py  storage.py
